# hackEmbedded

./: .gdb_history  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  readme_cn.md  setup.py  start.sh
cross-tools/: mipsn32-linux-gnu-as  mipsn32-linux-gnu-ld  mipsn32el-linux-gnu-as  mipsn32el-linux-gnu-ld
hackebds/: __init__.py  __init__.py.bak  aarch64.py  arch_sh.py  backdoor_encode.py  cve_info.py  database.py  exp_database.py  extract_shellcode.py  firmware_analyzer.py  hackebds_cmd.py  loongarch.py  mcpu_config.py  mips32n.py  model_back_infor  model_choise.py  my_package.py  power_bind_shell.py  power_reverse_shell.py  powerpc_info.py  sparc32.py  sparc64.py
hackebds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  hackebds.textClipping  requires.txt
hackebds/data/: hackebds.db
hackebds/exp_test/: A7000R.py
post_penetration/: README.md
post_penetration/armel/: README.md
post_penetration/armelv7/: README.md
post_penetration/mips/: README.md  socat-mips
post_penetration/mipsel/: README.md  ncat  nping  socat  tcpdump
source/: generate_aarch64.py  generate_arm.py  generate_mips.py  hackEmbedded_tool.py  make_reverse_shell.py  readme.md
source/hackebds-0.0.9/: test
source/hackebds-0.2.1/: PKG-INFO  README.md  README1.rst  setup.py
source/hackebds-0.2.1/hackebds.egg-info/: SOURCES.txt  requires.txt  top_level.txt
source/hackebds_for-pip-0.0.8/: PKG-INFO  README.md  setup.py
source/hackebds_for-pip-0.0.8/hackebds/: __init__.py  aarch64.py  arm.py
source/hackebds_for_pip_0.0.9/: setup.py
(+3 files in other folders)
